# hmdemo-mlsys26-contest

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  config.toml  pyproject.toml  skills-lock.json
configs/: variants.toml  workloads.toml
context/: README.md
cpp/: CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
cpp/adapters/tvm_ffi_moe/: README.md
cpp/include/hmdemo_nvbench_profile/: artifact.hpp  plugin_abi.h  plugin_loader.hpp  trace.hpp
cpp/runner/: README.md  runner.cu
cpp/src/: artifact.cpp  main.cpp  plugin_loader.cpp  trace.cpp
cpp/templates/: README.md
cpp/tests/: bad_plugin.cpp  smoke.cpp
docs/: README.md
docs/contest/: kernel-contracts.md  moe-base.md
docs/profiling/: cpp-nvbench-profiler.md
openspec/changes/add-moe-base-cuda-variant/: proposal.md  tasks.md
openspec/changes/add-moe-base-kernel/: design.md  proposal.md  tasks.md
openspec/changes/add-moe-base-kernel/specs/moe-base-kernel/: spec.md
openspec/changes/add-project-cli/: tasks.md
openspec/changes/add-project-cli/specs/project-cli-workloads/: spec.md
openspec/changes/archive/2026-05-26-add-project-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-26-add-project-cli/specs/project-cli-variants/: spec.md
openspec/changes/archive/2026-05-26-use-tvm-ffi-cuda-template/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-26-use-tvm-ffi-cuda-template/specs/cuda-tvm-ffi-solution/: spec.md
openspec/changes/archive/2026-05-26-use-tvm-ffi-cuda-template/specs/project-cli-variants/: spec.md
openspec/changes/archive/2026-05-27-document-kernel-contracts/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-27-document-kernel-contracts/specs/contest-kernel-contracts/: spec.md
openspec/changes/archive/2026-05-27-document-skillset-layout/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-27-document-skillset-layout/specs/project-skillset-layout/: spec.md
openspec/changes/archive/2026-05-28-add-cpp-nvbench-profiler/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-28-add-cpp-nvbench-profiler/specs/cpp-nvbench-profiler/: spec.md
openspec/changes/archive/2026-05-28-add-moe-base-cuda-variant/: design.md  tasks.md
openspec/changes/archive/2026-05-28-add-moe-base-cuda-variant/specs/moe-base-cuda-variant/: spec.md
openspec/changes/archive/2026-05-28-expose-nvbench-stopping-cli/: proposal.md
openspec/changes/archive/2026-05-28-expose-nvbench-stopping-cli/specs/nvbench-stopping-cli/: spec.md
openspec/changes/archive/2026-05-28-make-cpp-profiler-nvbench-native-cli/: proposal.md  tasks.md
openspec/changes/archive/2026-05-28-make-cuda-skills-self-contained/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-28-split-profiler-runner-kernel-plugin/: design.md  proposal.md
openspec/changes/expose-nvbench-stopping-cli/: design.md  tasks.md
openspec/changes/implement-moe-base-cutlass-gemm/: design.md  proposal.md  tasks.md
openspec/changes/implement-moe-base-cutlass-gemm/specs/moe-base-cutlass-gemm/: spec.md
openspec/changes/make-cpp-profiler-nvbench-native-cli/: design.md
openspec/changes/make-cpp-profiler-nvbench-native-cli/specs/cpp-profiler-nvbench-native-cli/: spec.md
openspec/changes/make-cuda-skills-self-contained/specs/domain-skill-self-containment/: spec.md
openspec/changes/port-flashinfer-moe-baseline/: design.md  proposal.md  tasks.md
openspec/changes/port-flashinfer-moe-baseline/specs/moe-base-flashinfer-baseline/: spec.md
openspec/changes/split-profiler-runner-kernel-plugin/: tasks.md
openspec/changes/split-profiler-runner-kernel-plugin/specs/cpp-profiler-kernel-plugin/: spec.md
openspec/specs/contest-kernel-contracts/: spec.md
openspec/specs/cpp-nvbench-profiler/: spec.md
openspec/specs/cpp-profiler-kernel-plugin/: spec.md
openspec/specs/cpp-profiler-nvbench-native-cli/: spec.md
openspec/specs/cuda-tvm-ffi-solution/: spec.md
openspec/specs/domain-skill-self-containment/: spec.md
openspec/specs/moe-base-cuda-variant/: spec.md
openspec/specs/nvbench-stopping-cli/: spec.md
openspec/specs/project-cli-variants/: spec.md
openspec/specs/project-cli-workloads/: spec.md
openspec/specs/project-skillset-layout/: spec.md
scripts/: pack_solution.py  run_local.py  run_modal.py
skillset/: README.md
skillset/dev/: README.md
skillset/runtime/: README.md  krnopt-cuda-coding  krnopt-cuda-domain-optimization  krnopt-cuda-generic-optimization  krnopt-cuda-profiling  krnopt-cuda-structural-optimization  krnopt-hw-aware-optimization  krnopt-low-precision-kernel-formats
skillset/runtime/project-op-variant-comparison/: SKILL.md
skillset/runtime/project-op-variant-comparison/agents/: openai.yaml
skillset/runtime/project-op-variant-comparison/references/: latency-compare.md  speedup-ratio-compare.md
skillset/runtime/project-op-variant-profiling/: SKILL.md
skillset/runtime/project-op-variant-profiling/agents/: openai.yaml
skillset/runtime/project-op-variant-profiling/references/: ncu-inspect.md  nvbench-timing.md  official-timing.md
skillset/runtime/project-op-variant-profiling/scripts/: pack_variant_solution.py
skillset/runtime/project-op-variant-validation/: SKILL.md
skillset/runtime/project-op-variant-validation/agents/: openai.yaml
skillset/runtime/project-op-variant-validation/references/: official-correctness-check.md
skillset/runtime/project-op-variant-validation/scripts/: pack_variant_solution.py
solution/cuda/: binding.py  kernel.cu  moe_base_baseline.cuh
src/hmdemo_mlsys26_contest/: __init__.py  cli.py  config_store.py  errors.py  models.py  paths.py  variants.py  workloads.py
teams/lead-code-review/: idea.md
tests/manual/: README.md  cpp_nvbench_profiler_smoke.sh
tests/unit/: test_cpp_nvbench_profiler_files.py  test_import.py  test_pack_solution.py  test_project_cli.py
variants/cuda/moe-base/: kernel.cu  variant.toml
variants/templates/cuda-default/: binding.py  kernel.cu  variant.toml
