[project]
authors = [{name = "igamenovoer", email = "igamenovoer@xx.com"}]
dependencies = [
    "attrs>=26.1.0,<27",
    "flashinfer-bench>=0.1.2,<0.2",
    "imageio>=2.37.3,<3",
    "mdutils>=1.8.1,<2",
    "mkdocs-material>=9.7.6,<10",
    "modal>=1.4.3,<2",
    "mypy>=2.1.0,<3",
    "numpy>=2.4.6,<3",
    "omegaconf>=2.3.0,<3",
    "pytest>=9.0.3,<10",
    "ruff>=0.15.14,<0.16",
    "scipy>=1.17.1,<2",
    "torch>=2.12.0,<3",
    "triton>=3.7.0,<4",
]
name = "hmdemo-mlsys26-contest"
requires-python = ">= 3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.environments]
cu130 = { features = ["cu130"], solve-group = "cu130" }

[tool.pixi.pypi-dependencies]
hmdemo_mlsys26_contest = { path = ".", editable = true }

[tool.pixi.tasks]
bench = "python scripts/run_local.py"
lint = "ruff check ."
modal-bench = "modal run scripts/run_modal.py"
pack = "python scripts/pack_solution.py"
test = "pytest tests/unit tests/integration"
typecheck = "mypy src scripts"

[tool.pixi.dependencies]
python = "3.12.*"

[tool.pixi.feature.cu130.target.linux-64.activation.env]
CUDA_HOME = "$CONDA_PREFIX/lib/python3.12/site-packages/nvidia/cu13"
PATH = "$CONDA_PREFIX/lib/python3.12/site-packages/nvidia/cu13/bin:$PATH"
CPATH = "$CONDA_PREFIX/lib/python3.12/site-packages/nvidia/cu13/include:$CPATH"
LIBRARY_PATH = "$CONDA_PREFIX/lib/python3.12/site-packages/nvidia/cu13/lib:$LIBRARY_PATH"
LD_LIBRARY_PATH = "$CONDA_PREFIX/lib/python3.12/site-packages/nvidia/cu13/lib:$LD_LIBRARY_PATH"
TORCH_CUDA_ARCH_LIST = "10.0a"
TVM_FFI_CUDA_ARCH_LIST = "10.0a"
NVCC_PREPEND_FLAGS = "--expt-relaxed-constexpr $NVCC_PREPEND_FLAGS"

[tool.pixi.feature.cu130.target.linux-64.pypi-dependencies]
cuda-toolkit = { version = "==13.0.2", extras = ["all"] }

[tool.ruff]
line-length = 100
src = ["src", "scripts", "solution"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"solution/**/*.py" = ["F401", "I001"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = [".", "src"]
testpaths = ["tests"]
